--- a/Assets/scripts/scss/_navh.scss
+++ b/Assets/scripts/scss/_navh.scss
@@ -1,9 +1,23 @@
 nav{
     width: 100%;
     height: 10%;
-
-    .menu{
-        display: inline-block;
-        list-style-type: none;
-    }
+    background-color:#541554;
+    color:#FFFFFF;
+        .logo-text{
+            width: 100%;
+            height: 10%;
+        }
+        .text{
+            margin-left: 20%;
+            font-size: 55px;
+        }
+        img.logo{
+            width: 15%;
+            height: 15%;
+            margin-top: 5%;
+        }
+        .menu{
+            display: none;
+            list-style-type: none;
+        }
 }
