--- a/Assets/scripts/scss/_reset.scss
+++ b/Assets/scripts/scss/_reset.scss
@@ -3,8 +3,13 @@
     padding: 0;
     width: 100vw;
     box-sizing:border-box;
+    font-family: 'Roboto';
 }
 @font-face {
-    font-family: SanSemi;
-    src: url(../fonts/EncodeSansSemiCondensed-Regular.ttf);
+font-family:'Roboto';
+    src: url(./../../fonts/Roboto-Regular.ttf) format('truetype');
 }
+@media only screen and (min-width: 576px) {}
+@media only screen and (min-width: 768px) {}
+@media only screen and (min-width: 992px) {}
+@media only screen and (min-width: 1200px) {}
